--- a/iron-form.html
+++ b/iron-form.html
@@ -14,10 +14,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!--
 `<iron-form>` is a wrapper around the HTML `<form>` element, that can
 validate and submit both custom and native HTML elements.
+
 It has two modes: if `redirect` is true, then after the form submission you
 will be redirected to the server response. Otherwise, if it is false, it will
 use an `iron-ajax` element to submit the form contents to the server.
+
   Example:
+
     <iron-form>
       <form method="get" action="/form/handler">
         <input type="text" name="name" value="Batman">
@@ -25,38 +28,50 @@ use an `iron-ajax` element to submit the form contents to the server.
         <paper-checkbox name="cheese" value="yes" checked></paper-checkbox>
       </form>
     </iron-form>
+
 By default, a native `<button>` element will submit this form. However, if you
 want to submit it from a custom element's click handler, you need to explicitly
 call the `iron-form`'s `submit` method.
+
   Example:
+
     <paper-button raised onclick="submitForm()">Submit</paper-button>
+
     function submitForm() {
       document.getElementById('iron-form').submit();
     }
+
 If you are not using the `redirect` mode, then you also have the option of
 customizing the request sent to the server. To do so, you can listen to the `iron-form-presubmit`
 event, and modify the form's[`iron-ajax`](https://elements.polymer-project.org/elements/iron-ajax)
 object. However, If you want to not use `iron-ajax` at all, you can cancel the
 event and do your own custom submission:
+
   Example of modifying the request, but still using the build-in form submission:
+
     form.addEventListener('iron-form-presubmit', function() {
       this.request.method = 'put';
       this.request.params['extraParam'] = 'someValue';
     });
+
   Example of bypassing the build-in form submission:
+
     form.addEventListener('iron-form-presubmit', function(event) {
       event.preventDefault();
       var firebase = new Firebase(form.getAttribute('action'));
       firebase.set(form.serialize());
     });
+
 Note that if you're dynamically creating this element, it's mandatory that you
 first create the contained `<form>` element and all its children, and only then
 attach it to the `<iron-form>`:
+
   var wrapper = document.createElement('iron-form');
   var form = document.createElement('form');
   var input = document.createElement('input');
   form.appendChild(input);
   wrapper.appendChild(form);
+
 @element iron-form
 @hero hero.svg
 @demo demo/index.html
@@ -70,13 +85,17 @@ attach it to the `<iron-form>`:
       }
     </style>
 
+    <!-- This form is used to collect the elements that should be submitted -->
     <slot id="content"></slot>
+
+    <!-- This form is used for submission -->
     <form id="helper" action$="[[action]]" method$="[[method]]" enctype$="[[enctype]]"></form>
   </template>
 
   <script>
     Polymer({
       is: 'iron-form',
+
       properties: {
         /*
          * Set this to true if you don't want the form to be submitted through an
@@ -221,6 +240,7 @@ attach it to the `<iron-form>`:
        * Resets the form to the default values.
        */
       reset: function(event) {
+        // We are not using this form for submission, so always cancel its event.
         if (event)
           event.preventDefault();
 
@@ -254,11 +274,11 @@ attach it to the `<iron-form>`:
         return json;
       },
 
-      _handleFormResponse: function(event) {
+      _handleFormResponse: function (event) {
         this.fire('iron-form-response', event.detail);
       },
 
-      _handleFormError: function(event) {
+      _handleFormError: function (event) {
         this.fire('iron-form-error', event.detail);
       },
 
