--- a/test/basic.html
+++ b/test/basic.html
@@ -92,11 +92,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <iron-form id="custom-inputs">
           <form action="/get" method="get">
             <paper-input name="input1[]"></paper-input>
-            <paper-input value="foo" name="input1[]"></paper-input>
-            <paper-input value="zag" name="input1[]"></paper-input>
-            <paper-input value="bar" name="input2"></paper-input>
-            <paper-input value="pass" type="password" name="pass1"></paper-input>
-            <paper-input value="35" type="number" name="number1"></paper-input>
+            <paper-input name="input1[]" value="foo"></paper-input>
+            <paper-input name="input1[]" value="zag"></paper-input>
+            <paper-input name="input2" value="bar"></paper-input>
+            <paper-input type="password" name="pass1" value="pass"></paper-input>
+            <paper-input type="number" name="number1" value="35"></paper-input>
           </form>
         </iron-form>
       </div>
@@ -106,7 +106,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <test-fixture id="validation">
     <template>
       <div>
-        <iron-form id="native-required" >
+        <iron-form id="native-required">
           <form action="/get" method="get">
             <input required>
           </form>
@@ -118,21 +118,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </form>
         </iron-form>
 
-        <iron-form id="native-invalid" >
+        <iron-form id="native-invalid">
           <form action="/get" method="get">
             <input pattern="aa" value="b">
           </form>
         </iron-form>
 
-        <iron-form id="custom-required" >
+        <iron-form id="custom-required">
           <form action="/get" method="get">
             <paper-input required></paper-input>
           </form>
         </iron-form>
 
-        <iron-form id="custom-invalid" >
+        <iron-form id="custom-invalid">
           <form action="/get" method="get">
-            <paper-input value="b" pattern="aa"></paper-input>
+            <paper-input pattern="aa" value="b"></paper-input>
           </form>
         </iron-form>
       </div>
@@ -166,8 +166,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <input type="radio" name="radio2">
           <paper-checkbox name="papercheck1" checked></paper-checkbox>
           <paper-checkbox name="papercheck2"></paper-checkbox>
-          <paper-input value="paper1" name="paper1"></paper-input>
-          <paper-input value="" name="paper2"></paper-input>
+          <paper-input name="paper1" value="paper1"></paper-input>
+          <paper-input name="paper2" value=""></paper-input>
           <input type="reset">
         </form>
       </iron-form>
